--- a/src/main/resources/templates/Fragments/Facultyfragments.html
+++ b/src/main/resources/templates/Fragments/Facultyfragments.html
@@ -332,7 +332,7 @@
     <div th:replace="~{Fragments/FacultyFragments :: FacultyMenu}"></div>
     <hr>
     <div class="table-responsive mt-1">
-        <h3 class="text-center text-primary mb-3">REGISTERED STUDENTS FOR <span th:text="${subjectName}"></span></h3>
+        <h3 class="text-center text-primary mb-3">REGISTERED STUDENTS FOR <span th:text="${subjectName.name}"></span></h3>
         <table class="m-2 table table-bordered">
             <thead>
             <tr class="text-center">
